--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
